# salz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: common.h  salz.h
lib/: CMakeLists.txt  lcp_cmp.c  lcp_cmp.h  salz.c  salz.h  vlc.c  vlc.h
programs/: CMakeLists.txt  README.md  bench_block.c  bench_block_plt.py  common.h  salzcli.c
scripts/: bench.sh
